# shimmer-ssd

./: .flake8  .gitignore  :wq  README.md  fit-log.txt  mypy.ini  pyproject.toml  test-log.txt  train_odd_one_out_labels.npy  validate-log.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs-new-release.yml  docs.yml  quality.yml  tests.yml
checkpoints/lightning_logs/version_1/: hparams.yaml
checkpoints/pretrained/: bim_vae_t.ckpt  bim_vae_v.ckpt  domain_attr.ckpt  domain_attr_legacy.ckpt  domain_t.ckpt  domain_t_attr.ckpt  domain_v.ckpt
config/: default.yaml  exp_test_common_space_fusion.yaml  exp_test_t.yaml  exp_var_cont.yaml  local.yaml  save_v_latents.yaml  train_att.yaml  train_gw.yaml  train_text2attr.yaml  viz_vae_attr.yaml  viz_vae_gw.yaml  viz_vae_v.yaml
config/debug/: main.yaml
config/default/: main.yaml  training.yaml
config/exp_var_cont/: main.yaml
config/local/: dataset.yaml  main.yaml  wandb.yaml
config/save_v_latents/: main.yaml
config/train_attr/: main.yaml
config/train_gw/: main.yaml
config/train_t/: main.yaml
config/train_v/: main.yaml
config/viz-vae-attr/: main.yaml
config/viz-vae-v/: main.yaml
docs/: config_parameters.md  index.html.jinja2  make.py
docs/api/: .gitignore
migrations/gw/: 1_add_gw_interfaces.py  2_del_gw_interfaces_hparam.py  3_del_gw_interfaces.py  4_del_buffers_put_models_in_gw_mod.py  5_del_coef_buffers.py
playground/: get_splits.sh  migrate_model.py  preprocess.py  save_v_latents.py  test_unpaired.py  text_bimgw.py  train_attention.py  train_attr.py  train_gw.py  train_gw_discriminator.py  train_shape_classifier.py  train_t.py  train_text2attr.py  train_v.py  utils.py
playground/attention/both_sides/: choice_heatmaps.py  heatmap.py  train_attention.py
playground/attention/fixed_vector/: heatmap.py  heatmap_mov_vec.py  train_attention.py
playground/attention/moving_vector/: choice_heatmaps.py  heatmap.py  train_attention.py
playground/attention/shapes_clf/: shapes_clf.py
playground/domains/: proto_language.py
playground/exploration/: contrastive_var.py  norm_cont_comp.py  test_common_space_fusion.py  test_t.py  var_norm_cont.py  var_norm_cont_loss.py
playground/utils/: clean_checkpoints.py  import_old_ckpt.py
playground/visualizations/: explore_vae.py  explore_vae_attr.py  explore_vae_gw.py  explore_vae_v.py
sample_dataset/: latent_mean.npy  latent_std.npy  test_caption_choices.npy  test_captions.npy  test_labels.npy  test_latent.npy  test_unpaired.npy  train_caption_choices.npy  train_captions.npy  train_labels.npy  train_latent.npy  train_unpaired.npy  val_caption_choices.npy  val_captions.npy  val_labels.npy  val_latent.npy  val_unpaired.npy
scripts/: migrate_model.py  save_v_latents.py  train_attr.py  train_gw.py  train_t.py  train_text2attr.py  train_v.py
scripts/exploration/: test_t.py
scripts/utils/: clean_checkpoints.py  import_old_ckpt.py
scripts/visualizations/: explore_vae_attr.py  explore_vae_v.py
shimmer_ssd/: __init__.py  ckpt_migrations.py  config.py  logging.py  types.py
shimmer_ssd/cli/: checkpoints.py  cli.py  config.py  download.py  extract.py  migrate.py  save_v_latents.py  train_attr.py  train_gw.py  train_t.py  train_v.py
shimmer_ssd/config_template/: exp_var_cont.yaml  main.yaml  viz_vae_gw.yaml
shimmer_ssd/dataset/: data_module.py  pre_process.py
shimmer_ssd/migrations/gw/: 0_initial_file_migrations.py  1_remove_logit_scale_in_t_domain.py
shimmer_ssd/modules/: contrastive_loss.py  vae.py
shimmer_ssd/modules/domains/: __init__.py  attribute.py  pretrained.py  text.py  visual.py
shimmer_ssd/text/: composer.py  utils.py
simple_shapes_dataset/: __init__.py  ckpt_migrations.py  config.py  config_interpolation.py  logging.py  types.py
simple_shapes_dataset/cli/: __init__.py  alignments.py  create_dataset.py  graph.py  odd_one_out.py  ood_splits.py  utils.py
simple_shapes_dataset/config/: dataset.py  domains.py  exploration.py  global_workspace.py  logging.py  root.py  slurm.py  training.py  types.py  visualization.py  wandb.py
simple_shapes_dataset/dataset/: __init__.py  data_module.py  dataset.py  domain.py  domain_alignment.py  pre_process.py  repeated_dataset.py
simple_shapes_dataset/dataset/downstream/odd_one_out/: data_module.py  dataset.py
simple_shapes_dataset/modules/: __init__.py  contrastive_loss.py  dataset.py  discriminator.py  domain.py  domain_alignment.py  global_workspace.py  losses.py  modality.py  symlog.py  vae.py
simple_shapes_dataset/modules/domains/: __init__.py  attribute.py  pretrained.py  text.py  visual.py
simple_shapes_dataset/text/: composer.py  utils.py  writers.py
slurm/: launch.py
tests/: test_alignment_split.py  test_cli_generate_color.py  test_dataset.py  test_domain.py  test_interpolation.py  test_logging.py  test_modality.py  test_odd_one_out.py  test_preprocess.py  test_train.py  test_utils.py
tokenizer/: merges.txt  vocab.json
