[tool.poetry]
name = "simple-shapes-dataset"
version = "0.1.2"
description = "The Simple Shapes Dataset used in the Global Workspace Paper"
authors = ["Benjamin Devillers <benjamin.devillers@cnrs.fr>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_shapes_dataset"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
click = "^8.1.3"
tqdm = "^4.65.0"
transformers = "^4.30.2"
opencv-python = "^4.7.0.72"
attributes-to-language = {git = "https://github.com/bdvllrs/attributes-to-language.git", rev = "v0.3.0"}
auto-sbatch = {git = "https://github.com/bdvllrs/auto-sbatch.git", rev = "v0.3.7"}
torchdata = "^0.6.1"
pillow = "^9.5.0"
numpy = "^1.25"
torch = "^2.0.1"
shimmer = {git = "git@github.com:bdvllrs/shimmer.git", rev = "main"}
wandb = "^0.15.4"
lightning = "^2.0.4"
pydantic = "<2.0.0"
torchmetrics = "<1.0.0"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.65.0.1"
lxml-stubs = "^0.4.0"
pandas-stubs = "^2.0.2.230605"
types-pillow = "^9.5.0.4"
types-pywin32 = "^306.0.0.2"
types-setuptools = "^67.8.0.0"
types-tabulate = "^0.9.0.2"
types-dataclasses = "^0.6.6"
flake8 = "^6.0.0"
mypy = "^1.4.0"
types-click = "^7.1.8"

[tool.poetry.group.test.dependencies]
torchvision = "^0.15.2"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shapesd = "simple_shapes_dataset.cli:cli"
